question-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 8080

    # - host: 
    #   http:
    #     paths:
    #       - path: /v2
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: app2-service
    #             port:
    #               number: 8080
